--- a/Roamni/Info.plist
+++ b/Roamni/Info.plist
@@ -36,22 +36,22 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.9</string>
+	<string>1.0.14</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fb1853852181523373</string>
+				<string>fb121221018486010</string>
 			</array>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>FacebookAppID</key>
-	<string>1853852181523373</string>
+	<string>121221018486010</string>
 	<key>FacebookDisplayName</key>
-	<string>Roamni</string>
+	<string>RoamniTest</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
