--- a/Roamni/Roamni.entitlements
+++ b/Roamni/Roamni.entitlements
@@ -4,5 +4,9 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)Roamni.Prototype.One</string>
+	</array>
 </dict>
 </plist>
